--- a/index.html
+++ b/index.html
@@ -7,3 +7,10 @@
     <title>receitas</title>
     <link rel="stylesheet" href="./style.css">
 </head>
+<body>
+    <header>
+        <div class="título"> 
+            <h1>Cozinha Fácil</h1>
+        </div>
+    </header>
+</body>
