--- a/index.html
+++ b/index.html
@@ -12,5 +12,9 @@
         <div class="título"> 
             <h1>Cozinha Fácil</h1>
         </div>
+        <div class="search-bar">
+            <input type="text" placeholder="Pesquisar receitas...">
+            <button>🔍</button>
+        </div>
     </header>
 </body>
