--- a/index.html
+++ b/index.html
@@ -17,4 +17,10 @@
             <button>🔍</button>
         </div>
     </header>
+     <main>
+        <div class="receitas">
+            <a href="./index.html"><i class="fa-solid fa-house"></i></a>
+        </div>
+        <h1>Biologia</h1>
+        <section class="receitas1">
 </body>
