--- a/index.html
+++ b/index.html
@@ -17,11 +17,19 @@
             <button>🔍</button>
         </div>
     </header>
-     <main>
-        <div class="receitas">
+    <main>
+      <div class="home">
             <a href="./index.html"><i class="fa-solid fa-house"></i></a>
         </div>
-        <h1>Biologia</h1>
-        <section class="receitas1">
-        </main>
+        <h1>Início</h1>
+        <section class="mat-container">
+            <div id="provas" class="conteudo">
+                <h2>Portifólio</h2>
+                <ul>
+                    <li>Intuito do site:<span class="block"> <br>Portifólio para organização escolar das matérias de Matemática, português e química.</span>
+                    </li>
+                </ul>
+            </div>
+            </section>
+            </main>
 </body>
