--- a/index.html
+++ b/index.html
@@ -18,11 +18,10 @@
         </div>
     </header>
     <main>
-      <div class="home">
-            <a href="./index.html"><i class="fa-solid fa-house"></i></a>
-        </div>
-        <h1>Início</h1>
-        <section class="mat-container">
+     <section class="container">
+            <div class="disciplina">
+                <a href="omelete.html"> <img src="omelete-classica-1.jpeg" alt="omelete"></a>
+            </div>class="mat-container">
             <div id="provas" class="conteudo">
                 <h2>Portifólio</h2>
                 <ul>
