--- a/index.html
+++ b/index.html
@@ -1,34 +1,57 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>receitas</title>
-    <link rel="stylesheet" href="./style.css">
+    <title>Festejando Campo e Cidade</title>
 </head>
 <body>
-    <header>
-        <div class="título"> 
-            <h1>Cozinha Fácil</h1>
-        </div>
-        <div class="search-bar">
-            <input type="text" placeholder="Pesquisar receitas...">
-            <button>🔍</button>
-        </div>
-    </header>
-    <main>
-     <section class="container">
-            <div class="disciplina">
-                <a href="omelete.html"> <img src="omelete-classica-1.jpeg" alt="omelete"></a>
-            </div>class="mat-container">
-            <div id="provas" class="conteudo">
-                <h2>Portifólio</h2>
-                <ul>
-                    <li>Intuito do site:<span class="block"> <br>Portifólio para organização escolar das matérias de Matemática, português e química.</span>
-                    </li>
-                </ul>
-            </div>
-            </section>
-            </main>
+
+<header>
+    <h1>Festejando a Conexão Campo e Cidade</h1>
+</header>
+
+<section>
+    <h2>Sobre o Tema</h2>
+    <p>O contato entre campo e cidade fortalece nossa cultura, a economia local e promove festas que unem pessoas de diferentes lugares.  
+    A troca de experiências permite valorizar tradições rurais, produtos agrícolas, culinária típica e manifestações culturais urbanas.</p>
+</section>
+
+<section>
+    <h2>Curiosidades</h2>
+    <ul>
+        <li>Em muitas cidades brasileiras existem festas que celebram a colheita e o trabalho no campo.</li>
+        <li>Feiras agroecológicas conectam produtores rurais diretamente com consumidores urbanos.</li>
+        <li>Artesanato rural muitas vezes inspira tendências na moda urbana.</li>
+    </ul>
+</section>
+
+<section class="gallery">
+    <h2>Galeria de Fotos</h2>
+    <img src="https://images.unsplash.com/photo-1500530855697-b586d89ba3ee?auto=format&fit=crop&w=800&q=80" alt="Campo">
+    <img src="https://images.unsplash.com/photo-1506784365847-bbad939e9335?auto=format&fit=crop&w=800&q=80" alt="Cidade">
+    <img src="https://images.unsplash.com/photo-1533055640609-24b498cdf39e?auto=format&fit=crop&w=800&q=80" alt="Evento">
+</section>
+
+<section>
+    <h2>Comidas Típicas</h2>
+    <p>As festas que unem campo e cidade também celebram a gastronomia. Alguns exemplos:</p>
+    <ul>
+        <li>Doces caseiros com frutas colhidas no campo</li>
+        <li>Pães e bolos feitos em fornos tradicionais</li>
+        <li>Pratos típicos de festivais urbanos inspirados na comida rural</li>
+    </ul>
+</section>
+
+<section>
+    <h2>Pequenas Histórias</h2>
+    <p><strong>Maria, produtora rural:</strong> "Levar meus produtos para a cidade me permitiu conhecer novos consumidores e fazer amigos de diferentes regiões."</p>
+    <p><strong>João, morador da cidade:</strong> "Visitar festas no campo me fez valorizar mais os alimentos e tradições que consumo todos os dias."</p>
+</section>
+
+<footer>
+    <p>Contato: <a href="malito:festival@campoecidade.com">festival@campoecidade.com</a></p>
+</footer>
+
 </body>
+</html>
